# VisualAI

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-05-visual-prompt-cookbook-skill.md
docs/superpowers/specs/: 2026-06-05-visual-prompt-cookbook-skill-design.md
skills/visual-prompt-cookbook/: SKILL.md
skills/visual-prompt-cookbook/agents/: openai.yaml
skills/visual-prompt-cookbook/assets/dashboard/: app.js  index.html
skills/visual-prompt-cookbook/references/: usage-workflow.md
skills/visual-prompt-cookbook/scripts/: cookbook_core.py  install_skill.py  serve_dashboard.py
tests/: helpers.py  test_cookbook_core.py  test_dashboard_server.py  test_install_cli.py  test_skill_instructions.py
visualai/: __init__.py  install_skill.py
