[project]
name = "visualai"
version = "0.1.0"
description = "Local Codex skill source for AI visual prompt workflows."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
visualai-install-skill = "visualai.install_skill:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["visualai*"]
