[project]
name = "visualai"
version = "0.1.0"
description = "Local AI-agent skill source for visual prompt workflows."
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
visualai-install = "visualai.install_skill:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["visualai*"]
